syntax = "proto3";

import "google/protobuf/timestamp.proto";

package block;
option go_package = "grpc/block/blockpb";

message Header {
  google.protobuf.Timestamp time = 1;
  string parent_hash = 2;
  int64  number = 3;
  string state_root = 4;
  string extrinsics_root = 5;
}

message Extrinsic {
  int64 extrinsic_index = 1;
  bool is_signed_transaction = 2;
  string signature = 3;
  string signer = 4;
  int64  nonce = 5;
  string method = 6;
  string section = 7;
  string args = 8;
}

message Block {
  Header header = 2;
  repeated Extrinsic extrinsics = 3;
}

message GetHeadRequest {}

message GetHeadResponse {
  int64 height = 1;
  google.protobuf.Timestamp time = 2;
  int64 session = 3;
  int64 era = 4;
}

message GetByHeightRequest {
  int64 height = 1;
}

message GetByHeightResponse {
  string chain = 1;
  string spec_version = 2;
  Block block = 3;
}

service BlockService {
  rpc GetHead (GetHeadRequest) returns (GetHeadResponse) {}
  rpc GetByHeight (GetByHeightRequest) returns (GetByHeightResponse) {}
}

